log
Fri Mar 20 05:57:58 PM UTC 2026: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:29: error: ‘i’ undeclared (first use in this function)
   46 |    for (int k = 1; k <= 10; i++)
      |                             ^
exercises.c:46:29: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:47:8: error: expected expression before ‘int’
   47 |        int* data = (int*) malloc(sizeof(int));
      |        ^~~
exercises.c:46:4: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   46 |    for (int k = 1; k <= 10; i++)
      |    ^~~
exercises.c:48:8: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   48 |        *data = k;
      |        ^
exercises.c:48:9: error: ‘data’ undeclared (first use in this function)
   48 |        *data = k;
      |         ^~~~
exercises.c:48:16: error: ‘k’ undeclared (first use in this function)
   48 |        *data = k;
      |                ^
cc1: all warnings being treated as errors
33efe24
Fri Mar 20 05:58:33 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:8: error: expected expression before ‘int’
   47 |        int* data = (int*) malloc(sizeof(int));
      |        ^~~
exercises.c:46:4: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   46 |    for (int k = 1; k <= 10; k++)
      |    ^~~
exercises.c:48:8: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   48 |        *data = k;
      |        ^
exercises.c:48:9: error: ‘data’ undeclared (first use in this function)
   48 |        *data = k;
      |         ^~~~
exercises.c:48:9: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:48:16: error: ‘k’ undeclared (first use in this function)
   48 |        *data = k;
      |                ^
cc1: all warnings being treated as errors
d63b66f
Fri Mar 20 06:18:21 PM UTC 2026: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:47:8: error: expected expression before ‘int’
   47 |        int* data = (int*) malloc(sizeof(int));
      |        ^~~
exercises.c:46:4: error: this ‘for’ clause does not guard... [-Werror=misleading-indentation]
   46 |    for (int k = 1; k <= 10; k++)
      |    ^~~
exercises.c:48:8: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘for’
   48 |        *data = k;
      |        ^
exercises.c:48:9: error: ‘data’ undeclared (first use in this function)
   48 |        *data = k;
      |         ^~~~
exercises.c:48:9: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:48:16: error: ‘k’ undeclared (first use in this function)
   48 |        *data = k;
      |                ^
cc1: all warnings being treated as errors
34db244
Fri Mar 20 06:19:01 PM UTC 2026: 
 exercises.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  1|4
total_score: 10/70
c44ab78
Sun Mar 22 08:05:55 PM UTC 2026: 
 exercises.c | 27 +++++++++++++++++++++++++--
 1 file changed, 25 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:59:4: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   59 |    while (dato != NULL)
      |    ^~~~~
exercises.c:61:8: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   61 |        dato = next(L);
      |        ^~~~
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:121:15: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
  121 |            if (cadena[i] == ')')
      |               ^
cc1: all warnings being treated as errors
5f085b3
Sun Mar 22 08:07:59 PM UTC 2026: 
 exercises.c | 12 ++----------
 1 file changed, 2 insertions(+), 10 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘parentesisBalanceados’:
exercises.c:117:11: error: unused variable ‘pila’ [-Werror=unused-variable]
  117 |    Stack* pila = create_stack();
      |           ^~~~
cc1: all warnings being treated as errors
8e3d42b
